# madgab

./: .gitignore  CORPUS_PLAN.md  Cargo.toml  Gemfile  README.md  generate.rb
.github/workflows/: test.yml
corpus/: README.md  bench.py  build.py
lib/: madgab.rb
lib/madgab/: search.rb  search_entry.rb  search_result.rb
python/: conda_install.sh
ruby/: 1_a_star_search.rb  2_phonetic_permutations.rb  README.md
ruby/lib/: madgab.rb
ruby/lib/madgab/: search.rb  search_a_star.rb  search_entry.rb  search_phonetic_permutations.rb  search_result.rb
src/: lib.rs  main.rs
tests/: corpus_integration.rs
