[package]
name = "madgab"
description = "Mad Gab puzzle generator — transforms target English phrases into phonetically-similar but lexically-rearranged clues, using the phonetics-rs listener-confusion metric for scoring."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Jack Danger <github@jackcanty.com>"]
repository = "https://github.com/JackDanger/madgab"
readme = "README.md"
keywords = ["madgab", "puzzle", "phonetics", "ipa", "linguistics"]
categories = ["games", "text-processing"]

[dependencies]
# Pinned to the phonetics-rs git tip until 0.3.0 publishes — the
# 0.2.0 release on crates.io doesn't yet expose the `transcriptions`
# feature this crate needs. Once 0.3.0 ships, replace with:
#   phonetics = { version = "0.3", package = "phonetics-rs", features = ["transcriptions"] }
phonetics = { package = "phonetics-rs", git = "https://github.com/JackDanger/phonetics.git", branch = "main", features = ["transcriptions"] }

[profile.release]
lto = "thin"
codegen-units = 1
