[package]
name = "madgab"
description = "Mad Gab puzzle generator — transforms target English phrases into phonetically-similar but lexically-rearranged clues, using the phonetics-rs listener-confusion metric for scoring."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Jack Danger <github@jackcanty.com>"]
repository = "https://github.com/JackDanger/madgab"
readme = "README.md"
keywords = ["madgab", "puzzle", "phonetics", "ipa", "linguistics"]
categories = ["games", "text-processing"]

[dependencies]
phonetics = { package = "phonetics-rs", version = "0.3", features = ["transcriptions"] }

[profile.release]
lto = "thin"
codegen-units = 1
